--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
 		        </exclusion>
 	        </exclusions>
         </dependency>
+		  <dependency>
+		      <groupId>com.guavus</groupId>
+				<artifactId>bizreflex</artifactId>
+				<version>1.0</version>
+		  </dependency>
         <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-serde</artifactId>
