--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>17.0</version>
+		</dependency>
+		<dependency>
 			<groupId>ps</groupId>
 			<artifactId>thriftGenerated</artifactId>
 			<version>platform4.0</version>
@@ -104,6 +109,10 @@
 			        <groupId>javax.servlet</groupId>
 			        <artifactId>servlet-api</artifactId>
 		        </exclusion>
+				  <exclusion>
+				      <groupId>com.google.guava</groupId>
+						<artifactId>guava</artifactId>
+				  </exclusion>
 	        </exclusions>
         </dependency>
 		  <dependency>
@@ -115,7 +124,18 @@
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-serde</artifactId>
             <version>0.13.0</version>
-        </dependency>
+       		<exclusions>
+		      	<exclusion>
+						<groupId>javax.servlet</groupId>
+						<artifactId>servlet-api</artifactId>
+					</exclusion>
+				</exclusions>
+		 </dependency>
+		  <dependency>
+		      <groupId>com.guavus.rubix</groupId>
+				<artifactId>rubix</artifactId>
+				<version>4.8</version>
+			</dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
@@ -164,9 +184,9 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.4</version>
                 <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
+					 <descriptors>
+					 	<descriptor>src/main/resources/configurator.xml</descriptor>
+					 </descriptors> 
                 </configuration>
                 <executions>
                     <execution>
