--- a/IntelligentCache/pom.xml
+++ b/IntelligentCache/pom.xml
@@ -19,6 +19,7 @@
 		<hadoop.version>2.4.0</hadoop.version>
     		<maven.compiler.source>1.7</maven.compiler.source>
     		<maven.compiler.target>1.7</maven.compiler.target>
+		<tomcat.version>7.0.34</tomcat.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -48,6 +49,42 @@
 			<classifier>yarn</classifier>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-catalina</artifactId>
+			<version>${tomcat.version}</version>
+		</dependency>
+		<dependency>
+		        <groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-core</artifactId>
+			
+			<version>${tomcat.version}</version>
+		</dependency>
+		<dependency>
+		  <groupId>org.apache.tomcat.embed</groupId>
+		  <artifactId>tomcat-embed-logging-juli</artifactId>
+		  <version>${tomcat.version}</version>
+		</dependency>
+		<dependency>
+		  <groupId>org.apache.tomcat.embed</groupId>
+		  <artifactId>tomcat-embed-jasper</artifactId>
+		  <version>${tomcat.version}</version>
+		</dependency>
+		<dependency>
+		  <groupId>org.apache.tomcat</groupId>
+		  <artifactId>tomcat-jasper</artifactId>
+		  <version>${tomcat.version}</version>
+		</dependency>
+		<dependency>
+		  <groupId>org.apache.tomcat</groupId>
+		  <artifactId>tomcat-jasper-el</artifactId>
+		  <version>${tomcat.version}</version>
+		</dependency>
+		<dependency>
+		  <groupId>org.apache.tomcat</groupId>
+		  <artifactId>tomcat-jsp-api</artifactId>
+		  <version>${tomcat.version}</version>
+		</dependency>
+		<dependency>
               		<groupId>com.google.code.gson</groupId>
               		<artifactId>gson</artifactId>
               		<version>1.7.1</version>
@@ -61,11 +98,13 @@
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
              <version>${hadoop.version}</version>
+				 <scope>provided</scope>
         </dependency>
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-common</artifactId>
 			<version>${hadoop.version}</version>
+			<scope>provided</scope>
             <exclusions>
                 <exclusion>
                     <groupId>javax.servlet</groupId>
@@ -140,6 +179,7 @@
       		<groupId>org.apache.spark</groupId>
       		<artifactId>spark-core_2.10</artifactId>
       		<version>1.0.1</version>
+				<scope>provided</scope>
 		<exclusions>
         		<exclusion>  <!-- declare the exclusion here -->
           		<groupId>org.apache</groupId>
@@ -155,11 +195,13 @@
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_2.10</artifactId>
 			<version>1.0.1</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-mapreduce-client-core</artifactId>
 			<version>2.4.0</version>
+			<scope>provided</scope>
 		</dependency>
 	<dependency>
 		<groupId>thirdparty</groupId>
@@ -190,6 +232,25 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
