--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>IntelligentCache-parent</groupId>
-	<artifactId>IntelligentCache-parent</artifactId>
+	<groupId>Acume-parent</groupId>
+	<artifactId>Acume-parent</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<modules>
-		<module>IntelligentCache</module>
-		<module>intelligentcache-war</module>
+		<module>Acume</module>
+		<module>Acume-war</module>
 	</modules>
 </project>
 
