--- a/Acume/pom.xml
+++ b/Acume/pom.xml
@@ -28,6 +28,11 @@
 			<version>17.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.guavus</groupId>
+			<artifactId>crux2.0</artifactId>
+			<version>0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>ps</groupId>
 			<artifactId>thriftGenerated</artifactId>
 			<version>platform4.0</version>
@@ -122,6 +127,11 @@
 			<artifactId>attval</artifactId>
 			<version>0.1</version>
     		</dependency>
+			<dependency>
+			    <groupId>com.github.jsqlparser</groupId>
+				 <artifactId>jsqlparser</artifactId>
+		       <version>0.8.5</version>
+		   </dependency>
 		<dependency>
       			<groupId>com.guavus</groupId>
       			<artifactId>bloomfilter</artifactId>
@@ -178,7 +188,7 @@
 		<dependency> <!-- Spark dependency -->
       		<groupId>org.apache.spark</groupId>
       		<artifactId>spark-core_2.10</artifactId>
-      		<version>1.0.1</version>
+      		<version>1.1.0</version>
 				<scope>provided</scope>
 		<exclusions>
         		<exclusion>  <!-- declare the exclusion here -->
@@ -194,7 +204,7 @@
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_2.10</artifactId>
-			<version>1.0.1</version>
+			<version>1.1.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
