--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>Acume-parent</groupId>
-	<artifactId>Acume-parent</artifactId>
+	<groupId>com.guavus</groupId>
+	<artifactId>acume</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
+   <name>Acume Project Parent POM</name>
 
 	<modules>
-		<module>Acume</module>
-		<module>Acume-war</module>
+		<module>cache</module>
+		<module>core</module>
+		<module>war</module>
 	</modules>
 </project>
 
