SPX-201: acume structure changed to cache+core+war.
Former-commit-id: 1ab25d5de1e414313dceedb2ed47ebd33f6c3a7a

--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 
 	<modules>
 		<module>cache</module>
-		<module>core</module>
-		<module>war</module>
+<!--		<module>core</module>
+		<module>war</module>    --> 
 	</modules>
 </project>
 
