--- a/core/pom.xml
+++ b/core/pom.xml
@@ -33,7 +33,12 @@
 			<groupId>com.guavus</groupId>
 			<artifactId>cache</artifactId>
 			<version>0.1-SNAPSHOT</version>
-		</dependency>
+	<!--		<exclusions>
+				<exclusion>
+
+				</exclusion>
+			</exclusions>
+	-->	</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
