SPX-203: Completed spring integration
Former-commit-id: c1d7f8ae42ea554910e041522582f877a44fc19a

--- a/core/src/test/resources/webapp/WEB-INF/classes/shiro.ini
+++ b/core/src/test/resources/webapp/WEB-INF/classes/shiro.ini
@@ -7,7 +7,7 @@
 #securityManager.authenticator.authenticationStrategy = $authcStrategy
 #pamRealm = com.guavus.rubix.user.shiro.PamRealm
 
-myRealm = com.guavus.rubix.TestApp.user.CdnUserRelam
+myRealm = com.guavus.acume.core.usermanagement.DefaultUserRealm
 customSubjectFactory = com.guavus.rubix.user.shiro.RubixWebSubjectFactory
 securityManager.subjectFactory = $customSubjectFactory
 
