--- a/core/pom.xml
+++ b/core/pom.xml
@@ -30,6 +30,12 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>org.datanucleus</groupId>
+			<artifactId>datanucleus-core</artifactId>
+			<version>4.0.3</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.guavus</groupId>
 			<artifactId>cache</artifactId>
 			<version>0.1-SNAPSHOT</version>
