SPX-203: Created war project for deployment
Former-commit-id: 040e01d59239dc8f1257115b2c59bcd7a3a194e4

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.guavus</groupId>
 	<artifactId>core</artifactId>
 	<version>0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<repositories>
 		<repository>
 			<id>Akka repository</id>
