--- a/acume-war/pom.xml
+++ b/acume-war/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.guauvs</groupId>
-	<artifactId>Acume-war</artifactId>
+	<artifactId>acume-war</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 
@@ -17,18 +17,9 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.guavus</groupId>
-			<artifactId>Acume</artifactId>
+			<artifactId>core</artifactId>
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
-        	<!--
-			<dependency>
-                        <groupId>user-management</groupId>
-                        <artifactId>user-management</artifactId>
-                        <version>1.0-SNAPSHOT</version>
-                        <type>war</type>
-        	</dependency>
-			-->
-
 	</dependencies>
 
 </project>
