SPX-203: Added search in web.xml
Former-commit-id: 990092822ad7960c5733631e1abb970692625ec6

--- a/acume-war/src/main/webapp/WEB-INF/web.xml
+++ b/acume-war/src/main/webapp/WEB-INF/web.xml
@@ -111,6 +111,18 @@
 		<servlet-name>RGService</servlet-name>
 		<url-pattern>/queryresponse/aggregate</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>RGService</servlet-name>
+		<url-pattern>/queryresponse/timeseries</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>RGService</servlet-name>
+		<url-pattern>/queryresponse/search</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>RGService</servlet-name>
+		<url-pattern>/queryresponse/sql</url-pattern>
+	</servlet-mapping>
 
 
 
