SPX-203: pom.xml modified
Former-commit-id: 1ce1b64a520684cb6d727046e3b139bcedd391b7

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<modules>
 		<module>cache</module>
 		<module>core</module>
-		<module>acume-war</module> 
+		<module>war</module> 
 	</modules>
 </project>
 
