--- a/core/pom.xml
+++ b/core/pom.xml
@@ -8,7 +8,7 @@
 		<version>0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
-	<groupId>com.guavus</groupId>
+	<groupId>com.guavus.acume</groupId>
 	<artifactId>core</artifactId>
 	<version>0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
@@ -18,7 +18,7 @@
 			<url>http://repo.akka.io/releases</url>
 		</repository>
 	</repositories>
-	<name>Acume</name>
+	<name>Acume Core</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -43,10 +43,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.guavus</groupId>
+			<groupId>com.guavus.acume</groupId>
 			<artifactId>cache</artifactId>
 			<version>0.1-SNAPSHOT</version>
-			<!-- <exclusions> <exclusion> </exclusion> </exclusions> -->
 		</dependency>
 		<!-- Spring dependency -->
 		<dependency>
