SPX-203: Added CMake List
Former-commit-id: 5aaab6d9755b4a79b82bf6acb8c07d2af425314e

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<modules>
 		<module>cache</module>
 		<module>core</module>
-		<module>war</module> 
+		<module>acume-war</module> 
 	</modules>
 </project>
 
