--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,9 @@ add_subdirectory(cache)
 add_subdirectory(war)
 add_subdirectory(core)
 
-#execute_process(COMMAND mkdir -p ${CMAKE_INSTALL_PREFIX}/opt/tms/java/lib))
-#execute_process(COMMAND mkdir -p ${CMAKE_INSTALL_PREFIX}/opt/tms/acume/classes))
-add_custom_target(Acume
+add_custom_target(acume
                   ALL
                   COMMAND ./pom.py ${SUPER_NAME}${SUPER_VERSION}
                   COMMAND mvn clean install -DskipTests=true 
                   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-
-##install(FILES Acume/target/Acume-${SUPER_NAME}${SUPER_VERSION}-jar-with-guava-hive-dependencies.jar DESTINATION opt/tms/java)
-#install(CODE "execute_process(COMMAND unzip -u -d ${ATLAS_DEPLOY_PATH}/Acume-${PROJECT_VERSION} ${WAR_PATH}/Acume-${PROJECT_VERSION}.war)")
+install(FILES acume-war/target/acume-war-${SUPER_NAME}${SUPER_VERSION} DESTINATION opt/tms/java)
