SPX-205: build problem resoultion.
Former-commit-id: 465c54ef9c83a51da0c04647d1574f3391da4cee

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -188,8 +188,8 @@
 		<!-- Spark dependencies end -->
 		<dependency>
 			<groupId>com.guavus</groupId>
-			<artifactId>SqlQueryBuilder</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<artifactId>QueryBuilder</artifactId>
+			<version>0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.guavus</groupId>
