SPX-203: changed Querybuilder deepndency name
Former-commit-id: f3acd5ba356b0776dd40ce67f6e109f174e9cf6c

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -188,7 +188,7 @@
 		<!-- Spark dependencies end -->
 		<dependency>
 			<groupId>com.guavus</groupId>
-        		<artifactId>SqlQueryBuilder</artifactId>
+        		<artifactId>QueryBuilder</artifactId>
         		<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
