SPX-205: build issue correction.
Former-commit-id: c937e182a687419faedef24dcb67f7699224524f

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -11,7 +11,7 @@
 </properties>
 <dependencies>
 <dependency>
-<groupId>com.guavus</groupId>
+<groupId>com.guavus.acume</groupId>
 <artifactId>core</artifactId>
 <version>0.1-SNAPSHOT</version>
 </dependency>
