--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,16 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>com.guavus</groupId>
 		<artifactId>acume</artifactId>
-		<version>0.1-SNAPSHOT</version>
+		<version>atlas3.4</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>com.guavus.acume</groupId>
 	<artifactId>core</artifactId>
-	<version>0.1-SNAPSHOT</version>
+	<version>atlas3.4</version>
 	<packaging>jar</packaging>
 	<repositories>
 		<repository>
@@ -45,7 +44,7 @@
 		<dependency>
 			<groupId>com.guavus.acume</groupId>
 			<artifactId>cache</artifactId>
-			<version>0.1-SNAPSHOT</version>
+			<version>atlas3.4</version>
 		</dependency>
 		<!-- Spring dependency -->
 		<dependency>
@@ -99,7 +98,7 @@
 		<dependency>
 			<groupId>com.guavus.rubix.user.management</groupId>
 			<artifactId>user-management</artifactId>
-			<version>4.9</version>
+			<version>atlas3.4</version>
 			<exclusions>
 				<exclusion>
 					<groupId>javax.servlet</groupId>
@@ -189,12 +188,12 @@
 		<dependency>
 			<groupId>com.guavus</groupId>
         		<artifactId>QueryBuilder</artifactId>
-        		<version>0.0.1-SNAPSHOT</version>
+        		<version>atlas3.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.guavus</groupId>
 			<artifactId>crux2.0</artifactId>
-			<version>0.1-SNAPSHOT</version>
+			<version>atlas3.4</version>
 		</dependency>
 	</dependencies>
 
@@ -369,7 +368,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<ignore/>
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
@@ -380,4 +379,3 @@
 		</pluginManagement>
 	</build>
 </project>
-
