--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.guavus</groupId>
 	<artifactId>acume</artifactId>
-	<version>atlas3.4</version>
+	<version>0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
    <name>Acume Project Parent POM</name>
 
@@ -13,3 +14,4 @@
 		<module>war</module> 
 	</modules>
 </project>
+
