SPX-204: build issue correction.
Former-commit-id: 1faa095ece03f4c1e86f3c908b9908709b2ec2a4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,5 @@ add_custom_target(acume
                   COMMAND ./pom.py ${SUPER_NAME}${SUPER_VERSION}
                   COMMAND mvn clean install -DskipTests=true 
                   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-install(FILES war/target/acume-war-${SUPER_NAME}${SUPER_VERSION} DESTINATION opt/tms/java)
+#install(FILES war/target/acume-war-${SUPER_NAME}${SUPER_VERSION} DESTINATION opt/tms/java)
+install(CODE "execute_process(COMMAND unzip -u -d opt/tms/java/acume-war-${PROJECT_VERSION} ${WAR_PATH}/acume-war-${PROJECT_VERSION}.war)")
