SPX-204: build issue correction.
Former-commit-id: b8991873b1d58ff48c157a1b532162c184621df4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,5 @@ add_custom_target(acume
                   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 #install(FILES war/target/acume-war-${SUPER_NAME}${SUPER_VERSION} DESTINATION opt/tms/java)
 #install(CODE "execute_process(COMMAND unzip -u -d opt/tms/java/acume-war-${PROJECT_VERSION} ${WAR_PATH}/acume-war-${PROJECT_VERSION}.war)")
-install(CODE "execute_process(COMMAND unzip -u -d ${ATLAS_DEPLOY_PATH}/acume-war-${PROJECT_VERSION} ${WAR_PATH}/acume-war-${PROJECT_VERSION}.war)")
+#install(CODE "execute_process(COMMAND unzip -u -d opt/tms/java/acume-war-${PROJECT_VERSION} ${WAR_PATH}j/acume-war-${PROJECT_VERSION}.war)")
+install(DIRECTORY war/target/acume-war-${SUPER_NAME}${SUPER_VERSION} DESTINATION opt/tms/java)
