SPX-203: Done changers for yarn client mode
Former-commit-id: c0d9d0cb2b6ced60fe4cbeac964aa0b267e842f0

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -26,10 +26,16 @@
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<tomcat.version>7.0.34</tomcat.version>
-		<jersey-version>1.4</jersey-version>
+		<jersey-version>1.8</jersey-version>
 		<org.springframework.version>3.2.0.RELEASE</org.springframework.version>
 	</properties>
 	<dependencies>
+		<dependency>
+	<groupId>asm</groupId>
+	<artifactId>asm-all</artifactId>
+	<version>3.3.1</version>
+</dependency>
+
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
@@ -98,6 +104,17 @@
 					<groupId>javax.servlet</groupId>
 					<artifactId>servlet-api</artifactId>
 				</exclusion>
+				<exclusion>
+                                        <groupId>com.google.guava</groupId>
+                                        <artifactId>guava</artifactId>
+                                </exclusion>
+				<exclusion>
+					<groupId>asm</groupId>
+					<artifactId>asm</artifactId>
+				</exclusion>
+				<exclusion>
+                                	<groupId>com.sun.jersey</groupId>
+                                </exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -111,16 +128,25 @@
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-json</artifactId>
 			<version>${jersey-version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-core</artifactId>
 			<version>${jersey-version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-server</artifactId>
 			<version>${jersey-version}</version>
+			<scope>provided</scope>
+			<exclusions>
+			<exclusion>
+                                        <groupId>asm</groupId>
+                                        <artifactId>asm</artifactId>
+                                </exclusion>
+			</exclusions>
 		</dependency>
 		<!-- Rest Service dependencies end -->
 		<dependency>
@@ -173,11 +199,11 @@
         		<artifactId>QueryBuilder</artifactId>
         		<version>0.1-SNAPSHOT</version>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>com.guavus</groupId>
 			<artifactId>crux2.0</artifactId>
 			<version>0.1-SNAPSHOT</version>
-		</dependency>
+		</dependency-->
 	</dependencies>
 
 	<build>
