--- a/war/pom.xml
+++ b/war/pom.xml
@@ -14,6 +14,49 @@
 <groupId>com.guavus.acume</groupId>
 <artifactId>core</artifactId>
 <version>0.1-SNAPSHOT</version>
+<exclusions>
+	<exclusion>
+		<groupId>org.apache.spark</groupId>
+                <artifactId>spark-core_2.10</artifactId>		
+	</exclusion>
+	<exclusion>
+		<groupId>org.apache.spark</groupId>
+                <artifactId>spark-sql_2.10</artifactId>
+	</exclusion>
+	<exclusion>
+		<groupId>org.apache.spark</groupId>
+                <artifactId>spark-hive_2.10</artifactId>		
+	</exclusion>
+</exclusions>
 </dependency>
+<dependency>
+                        <groupId>com.guavus.rubix.user.management</groupId>
+                        <artifactId>user-management</artifactId>
+                        <version>4.9</version>
+                        <exclusions>
+                                <exclusion>
+                                        <groupId>javax.servlet</groupId>
+                                        <artifactId>servlet-api</artifactId>
+                                </exclusion>
+                                <exclusion>
+                                        <groupId>com.google.guava</groupId>
+                                        <artifactId>guava</artifactId>
+                                </exclusion>
+                                <exclusion>
+                                        <groupId>asm</groupId>
+                                        <artifactId>asm</artifactId>
+                                </exclusion>
+				<exclusion>
+				<groupId>com.sun.jersey</groupId>
+				<artifactId>*</artifactId>
+				</exclusion>
+                        </exclusions>
+                </dependency>
+<dependency>
+	<groupId>asm</groupId>
+	<artifactId>asm-all</artifactId>
+	<version>3.3.1</version>
+</dependency>
+
 </dependencies>
 </project>
