--- a/core/src/test/resources/webapp/WEB-INF/web.xml
+++ b/core/src/test/resources/webapp/WEB-INF/web.xml
@@ -124,17 +124,42 @@
 		<url-pattern>/queryresponse/sql</url-pattern>
 	</servlet-mapping-->
 
-<servlet>
-    <servlet-name>HelloWorld</servlet-name>
-    <servlet-class>com.guavus.acume.core.servlet.SqlRequestServlet
-      </servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>HelloWorld</servlet-name>
-    <url-pattern>/sql</url-pattern>
-  </servlet-mapping>
+	<servlet>
+    	<servlet-name>Sql</servlet-name>
+    	<servlet-class>com.guavus.acume.core.servlet.SqlRequestServlet</servlet-class>
+  	</servlet>
+  	<servlet>
+    	<servlet-name>Aggregate</servlet-name>
+    	<servlet-class>com.guavus.acume.core.servlet.AggregateRequestServlet</servlet-class>
+  	</servlet>
+  	<servlet>
+    	<servlet-name>Search</servlet-name>
+    	<servlet-class>com.guavus.acume.core.servlet.SearchRequestServlet</servlet-class>
+  	</servlet>
+  	<servlet>
+    	<servlet-name>TimeSeries</servlet-name>
+    	<servlet-class>com.guavus.acume.core.servlet.TimeSeriesRequestServlet</servlet-class>
+  	</servlet>
+  	
+  	
+  	<servlet-mapping>
+    	<servlet-name>Sql</servlet-name>
+    	<url-pattern>/sql</url-pattern>
+  	</servlet-mapping>
+  	<servlet-mapping>
+    	<servlet-name>Aggregate</servlet-name>
+    	<url-pattern>/aggregate</url-pattern>
+  	</servlet-mapping>
+  	<servlet-mapping>
+    	<servlet-name>Search</servlet-name>
+    	<url-pattern>/search</url-pattern>
+  	</servlet-mapping>
+  	<servlet-mapping>
+    	<servlet-name>TimeSeries</servlet-name>
+    	<url-pattern>/timeseries</url-pattern>
+  	</servlet-mapping>
 
-
+  	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.jsp</welcome-file>
