SPX-220: Adding deployment script to start accume server
Former-commit-id: e4a8bdf22ff4628b9ed7e9a38c0d0fa663caf9e8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,5 @@ add_custom_target(acume
                   COMMAND mvn clean install -DskipTests=true 
                   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 install(DIRECTORY war/target/acume-war-${SUPER_NAME}${SUPER_VERSION} DESTINATION opt/tms/java)
+install(DIRECTORY war/src/main/tomcat DESTINATION opt/tms/acume)
+
