--- a/core/src/test/resources/webapp/WEB-INF/classes/acume.conf
+++ b/core/src/test/resources/webapp/WEB-INF/classes/acume.conf
@@ -1,9 +1,9 @@
 acume.cache.baselayer.businesscubexml src/test/resources/cubedefinition.xml
 acume.cache.core.variableretentionmap 1h:720
 acume.cache.baselayer.instainstanceid 0
-acume.cache.baselayer.storagetype text
+acume.cache.baselayer.storagetype parquet
 acume.cache.core.timezone GMT
-acume.cache.baselayer.instabase src/test/resources/instabase
+acume.cache.baselayer.instabase src/test/resources/parquetInstabase
 acume.cache.baselayer.cubedefinitionxml cubexml
 acume.cache.execute.qltype sql
 acume.cache.rrcache.loader com.guavus.acume.cache.workflow.RequestResponseCache
