--- a/war/src/main/resources/usermanagement.properties
+++ b/war/src/main/resources/usermanagement.properties
@@ -1,3 +1,3 @@
-umDatabaseVersion=0.0
-solutionDatabaseVersion=0.0
-isCaseInsensetive=true
+umDatabaseVersion=$CLI_REPLACE_UMDBVERSION$
+solutionDatabaseVersion=$CLI_REPLACE_SOLUTIONDBVERSION$
+isCaseInsensetive=$CLI_REPLACE_ISCASEINSENSITIVE$
