--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -10,3 +10,4 @@ acume.cache.rrcache.loader $CLI_REPLACE_CACHERRCACHELOADER$
 acume.cache.core.rrcacheconcurrenylevel $CLI_REPLACE_CACHECORERRCACHECONCURRENYLEVEL$
 acume.cache.core.rrcahcesize $CLI_REPLACE_CACHECORERRCAHCESIZE$
 acume.cache.delete.lastbinpersistedtime $CLI_REPLACE_CACHEDELETELASTBINPERSISTEDTIME$
+acume.core.enableJDBCServer $CLI_REPLACE_COREENABLEJDBCSERVER$
