--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,5 @@ add_custom_target(acume
 install(DIRECTORY war/target/acume-war-${SUPER_NAME}${SUPER_VERSION} DESTINATION opt/tms/java)
 install(DIRECTORY war/src/main/tomcat DESTINATION opt/tms/acume)
 
+install(CODE "execute_process(COMMAND mkdir -p modules/gms_${GMS_MODULE_VERSION}/config-mgmt/webtool/configure/gms/Profiles/Default/)")
+install(DIRECTORY Profiles/Default/ DESTINATION modules/gms_${GMS_MODULE_VERSION}/config-mgmt/webtool/configure/gms/Profiles/Default/ FILES_MATCHING PATTERN "*.xml")
