SPX-238: Adding interfaces to support HIVE as datasource
Former-commit-id: 75cd6c8cc5abe9d247206005fec38931cc33785e

--- a/core/src/test/resources/webapp/WEB-INF/web.xml
+++ b/core/src/test/resources/webapp/WEB-INF/web.xml
@@ -103,9 +103,14 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet-->
 	<servlet>
-		<servlet-name>InitServlet</servlet-name>
+		<servlet-name>AcumeInitServlet</servlet-name>
 		<servlet-class>com.guavus.acume.servlet.AcumeInitServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet>
+		<servlet-name>HiveInitServlet</servlet-name>
+		<servlet-class>com.guavus.acume.servlet.AcumeHiveInitServlet</servlet-class>
+		<load-on-startup>2</load-on-startup>
 	</servlet>
 	<!-- servlet-mapping>
 		<servlet-name>RGService</servlet-name>
