RAN-202: Integration issue.
Former-commit-id: bee809ed179f5643d79bc4caff12be86672efd14

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,14 @@
-INCLUDE(${CMAKE_SOURCE_DIR}/version.cmake)
+add_subdirectory(cache)
+add_subdirectory(war)
+add_subdirectory(core)
 
-add_custom_target(IntelligentCache
+add_custom_target(acume
                   ALL
                   COMMAND ./pom.py ${SUPER_NAME}${SUPER_VERSION}
                   COMMAND mvn clean install -DskipTests=true 
                   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+install(DIRECTORY war/target/acume-war-${SUPER_NAME}${SUPER_VERSION} DESTINATION opt/tms/java)
+install(DIRECTORY war/src/main/tomcat DESTINATION opt/tms/acume)
 
-#install(FILES IntelligentCache/target/IntelligentCache-${SUPER_NAME}${SUPER_VERSION}-jar-with-guava-hive-dependencies.jar DESTINATION opt/tms/java)
-install(CODE "execute_process(COMMAND unzip -u -d ${ATLAS_DEPLOY_PATH}/IntelligentCache-${PROJECT_VERSION} ${WAR_PATH}/IntelligentCache-${PROJECT_VERSION}.war)")
+install(CODE "execute_process(COMMAND mkdir -p modules/gms_${GMS_MODULE_VERSION}/config-mgmt/webtool/configure/gms/Profiles/Default/)")
+install(DIRECTORY Profiles/Default/ DESTINATION modules/gms_${GMS_MODULE_VERSION}/config-mgmt/webtool/configure/gms/Profiles/Default/ FILES_MATCHING PATTERN "*.xml")
