--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
-IntelligentCache/target/*
-intelligentcache-war/target/*
+core/target/*
+cache/target/*
+war/target/*
+cache/.cache
+cache/.classpath
+cache/.project
+core/.cache
+core/.classpath
+core/.project
+core/.settings/
+war/.classpath
+war/.project
+
