--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>IntelligentCache-parent</groupId>
-	<artifactId>IntelligentCache-parent</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<groupId>com.guavus</groupId>
+	<artifactId>acume</artifactId>
+	<version>0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
+   <name>Acume Project Parent POM</name>
 
 	<modules>
-		<module>IntelligentCache</module>
-		<module>intelligentcache-war</module>
+		<module>cache</module>
+		<module>core</module>
+		<module>war</module> 
 	</modules>
 </project>
 
