--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -150,7 +150,7 @@
     	<servlet-class>com.guavus.acume.core.servlet.ValidateQueryServlet</servlet-class>
   	</servlet>
   	<servlet>
-    	<servlet-name>ValidDataSources</servlet-name>
+    	<servlet-name>ValidateDataSources</servlet-name>
     	<servlet-class>com.guavus.acume.core.servlet.ValidDataSourcesServlet</servlet-class>
   	</servlet>
   	<servlet>
@@ -184,15 +184,15 @@
   	</servlet-mapping>
   	<servlet-mapping>
     	<servlet-name>ValidateQuery</servlet-name>
-	<url-pattern>/queryresponse/ValidateQuery</url-pattern>
+	<url-pattern>/queryresponse/validateQuery</url-pattern>
   	</servlet-mapping>
   	<servlet-mapping>
-    	<servlet-name>ValidDataSources</servlet-name>
-	<url-pattern>/queryresponse/ValidDataSources</url-pattern>
+    	<servlet-name>ValidateDataSources</servlet-name>
+	<url-pattern>/queryresponse/validateDataSources</url-pattern>
   	</servlet-mapping>
   	<servlet-mapping>
     	<servlet-name>DataAvailability</servlet-name>
-	<url-pattern>/queryresponse/DataAvailability</url-pattern>
+	<url-pattern>/queryresponse/dataAvailability</url-pattern>
   	</servlet-mapping>
 
   	
