--- a/core/src/test/resources/webapp/WEB-INF/web.xml
+++ b/core/src/test/resources/webapp/WEB-INF/web.xml
@@ -150,7 +150,7 @@
     	<servlet-class>com.guavus.acume.core.servlet.ValidateQueryServlet</servlet-class>
   	</servlet>
   	<servlet>
-    	<servlet-name>ValidateDataSources</servlet-name>
+    	<servlet-name>ValidDataSources</servlet-name>
     	<servlet-class>com.guavus.acume.core.servlet.ValidDataSourcesServlet</servlet-class>
   	</servlet>
   	<servlet>
@@ -187,8 +187,8 @@
 	<url-pattern>/queryresponse/validateQuery</url-pattern>
   	</servlet-mapping>
   	<servlet-mapping>
-    	<servlet-name>ValidateDataSources</servlet-name>
-	<url-pattern>/queryresponse/validateDataSources</url-pattern>
+    	<servlet-name>ValidDataSources</servlet-name>
+	<url-pattern>/queryresponse/validDataSources</url-pattern>
   	</servlet-mapping>
   	<servlet-mapping>
     	<servlet-name>DataAvailability</servlet-name>
