--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -150,7 +150,7 @@
     	<servlet-class>com.guavus.acume.core.servlet.ValidateQueryServlet</servlet-class>
   	</servlet>
   	<servlet>
-    	<servlet-name>ValidateDataSources</servlet-name>
+    	<servlet-name>ValidDataSources</servlet-name>
     	<servlet-class>com.guavus.acume.core.servlet.ValidDataSourcesServlet</servlet-class>
   	</servlet>
   	<servlet>
@@ -184,7 +184,7 @@
   	</servlet-mapping>
   	<servlet-mapping>
     	<servlet-name>ValidateQuery</servlet-name>
-	<url-pattern>/queryresponse/validateQuery</url-pattern>
+	<url-pattern>/queryresponse/validQuery</url-pattern>
   	</servlet-mapping>
   	<servlet-mapping>
     	<servlet-name>ValidateDataSources</servlet-name>
