SPX-283: GMS template bug fixes
Former-commit-id: 3a9c720c88c4a228e02ca75a75c4c21a62225e87

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,5 @@
+INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/GMSmoduleversion.cmake)
+
 add_subdirectory(cache)
 add_subdirectory(war)
 add_subdirectory(core)
