--- a/war/pom.xml
+++ b/war/pom.xml
@@ -30,9 +30,10 @@
 </exclusions>
 </dependency>
 <dependency>
-                        <groupId>com.guavus.rubix.user.management</groupId>
+                        <groupId>user-management</groupId>
                         <artifactId>user-management</artifactId>
-                        <version>4.9</version>
+                        <version>1.0-SNAPSHOT</version>
+                        <type>war</type>
                         <exclusions>
                                 <exclusion>
                                         <groupId>javax.servlet</groupId>
@@ -57,6 +58,5 @@
 	<artifactId>asm-all</artifactId>
 	<version>3.3.1</version>
 </dependency>
-
 </dependencies>
 </project>
