--- a/core/pom.xml
+++ b/core/pom.xml
@@ -43,6 +43,11 @@
 			<artifactId>cache</artifactId>
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.guavus</groupId>
+			<artifactId>search</artifactId>
+			<version>0.1-SNAPSHOT</version>
+		</dependency>
 		<!-- Spring dependency -->
 		<dependency>
 			<groupId>org.springframework</groupId>
