SPX-283: Added search jar in core
Former-commit-id: 980c10ee5b95abc05945b933a9e3cc8922d8804c

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -47,6 +47,16 @@
 			<groupId>com.guavus</groupId>
 			<artifactId>search</artifactId>
 			<version>0.1-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.hive</groupId>
+					<artifactId>hive-exec</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.guavus</groupId>
+					<artifactId>crux</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- Spring dependency -->
 		<dependency>
