--- a/core/pom.xml
+++ b/core/pom.xml
@@ -137,8 +137,20 @@
 					<artifactId>asm</artifactId>
 				</exclusion>
 				<exclusion>
-					<groupId>com.sun.jersey</groupId>
+                			<groupId>com.sun.jersey</groupId>
+                		</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>log4j-over-slf4j</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.apache.logging.log4j</groupId>
+                        		<artifactId>log4j-core</artifactId>
+                		</exclusion>
+				<exclusion>
+                        		<groupId>log4j</groupId>
+                        		<artifactId>log4j</artifactId>
+                		</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
