SPX-291:Correct web.xml
Former-commit-id: a7b06ff88c9fca8e7ea8b0adafa1e423cca23536

--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -187,7 +187,7 @@
 	<url-pattern>/queryresponse/validQuery</url-pattern>
   	</servlet-mapping>
   	<servlet-mapping>
-    	<servlet-name>ValidateDataSources</servlet-name>
+    	<servlet-name>ValidDataSources</servlet-name>
 	<url-pattern>/queryresponse/validateDataSources</url-pattern>
   	</servlet-mapping>
   	<servlet-mapping>
